# tdd_training

./: .gitignore  README.md  notes.md
PrimeFactors/: CMakeLists.txt
PrimeFactors/include/: PrimeFactors.h
PrimeFactors/src/: PrimeFactors.cpp
PrimeFactors/test/: CMakeLists.txt  PrimeFactorsTest.cpp
SmartPayment/: CMakeLists.txt
SmartPayment/include/: Card.h  DiscountProvider.h  ICard.h  IDiscountProvider.h  Payment.h
SmartPayment/src/: Card.cpp  DiscountProvider.cpp  Payment.cpp
SmartPayment/test/: CMakeLists.txt  PaymentTest.cpp
SmartPayment/test/mocks/: CardMock.hpp  DiscountProviderMock.hpp
